src/test/ui/issues/issue-35450.stderr
error: expected expression, found `$`
  --> $DIR/issue-35450.rs:4:8
   |
LL |     m!($t); //~ ERROR expected expression
   |        ^ expected expression

error: aborting due to previous error

